--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^11.5.0",
     "react": "19.0.0",
     "react-native": "0.78.0"
   },
